@@ -21,7 +21,13 @@
            'label': 'Add Asset',
            'icon': 'fi-plus',
            'href': r.route_url('asset.new', pid=part.id, new_type='asset'),
-           'highlight': True}]},
+           'highlight': True},
+          {'visible': part.parent.allow('edit', r.current_user),
+           'label': 'Insert task before',
+           'href': r.route_url('part.new', new_type='task', _query=[('parent_id', part.parent.id), ('order', part.order)])},
+          {'visible': part.parent.allow('edit', r.current_user),
+           'label': 'Add task after',
+           'href': r.route_url('part.new', new_type='task', _query=[('parent_id', part.parent.id), ('order', part.order + 1)])}]},
         {'group': 'importexport', 'items': [
           {'visible': part.allow('edit', r.current_user),
            'label': 'Export',
